--- a/src/assets/styles/customTable.scss
+++ b/src/assets/styles/customTable.scss
@@ -1,11 +1,31 @@
-$baseFontSize: 10;
+@import "helpers";
 
-@function rem($size) {
-    $remSize: $size / $baseFontSize;
-    @if $size == 1 {
-        @return #{$size}px;
+:root {
+    --window-height: 100vh;
+}
+
+* {
+    margin: 0;
+    border: 0;
+    padding: 0;
+    outline: 0;
+    border-radius: 0;
+    background: none;
+    vertical-align: top;
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-tap-highlight-color: transparent;
+    &, &:before, &:after {
+        box-sizing: border-box;
     }
-    @return #{$remSize}rem;
+}
+
+html, body, #root {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 .table-data {
@@ -14,7 +34,7 @@ $baseFontSize: 10;
     flex-flow: column;
     align-items: flex-start;
     color: white;
-    background-color: #464d55;
+    background-color: #242a31;
     border: solid 1px #424a51;
 }
 
@@ -25,7 +45,7 @@ $baseFontSize: 10;
     width: 100%;
     border-bottom: solid 1px #727272;
     font-weight: 300;
-    &.header {
+    &.head {
         border: none;
         position: sticky;
         top: 0;
