--- a/src/assets/styles/customTable.scss
+++ b/src/assets/styles/customTable.scss
@@ -1,41 +1,12 @@
 @import "helpers";
 
-:root {
-    --window-height: 100vh;
-}
-
-* {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    outline: 0;
-    border-radius: 0;
-    background: none;
-    vertical-align: top;
-    -webkit-font-smoothing: subpixel-antialiased;
-    -webkit-tap-highlight-color: transparent;
-    &, &:before, &:after {
-        box-sizing: border-box;
-    }
-}
-
-html, body, #root {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
 .table-data {
     width: 100%;
     display: flex;
     flex-flow: column;
     align-items: flex-start;
     color: white;
-    background-color: #242a31;
-    border: solid 1px #424a51;
+    background-color: #dbf8ff;
 }
 
 .row {
@@ -43,7 +14,7 @@ html, body, #root {
     flex-flow: row nowrap;
     align-items: stretch;
     width: 100%;
-    border-bottom: solid 1px #727272;
+    border-bottom: solid 1px rgba(#31b9ad, 0.5);
     font-weight: 300;
     &.head {
         border: none;
@@ -65,7 +36,7 @@ html, body, #root {
                     transform: scale(1);
                 }
                 25%, 75% {
-                    transform: scale(1.1);
+                    transform: scale(1.5);
                 }
                 50% {
                     transform: scale(0.5);
@@ -88,7 +59,7 @@ html, body, #root {
     padding: 10px;
     word-break: break-all;
     display: flex;
-    color: white;
+    color: rgba(black, 0.7);
     align-items: center;
     &.sm {
         flex: 1;
