--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Cabin&display=swap');
+
 $baseFontSize: 10;
 $green: #03C375;
 $red: #c4184a;
@@ -8,4 +10,32 @@ $red: #c4184a;
     @return #{$size}px;
   }
   @return #{$remSize}rem;
+}
+
+
+:root {
+  --window-height: 100vh;
+}
+
+* {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  outline: 0;
+  border-radius: 0;
+  background: none;
+  vertical-align: top;
+  font-family: 'Cabin', sans-serif;
+  &, &:before, &:after {
+    box-sizing: border-box;
+  }
+}
+
+html, body, #root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
